# mnist-wasm

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
api/: Cargo.toml  README.md  env.sample  launch.json  weights.txt
api/src/: main.rs
model/: Cargo.toml  README.md
model/src/: activations.rs  lib.rs  model.rs  util.rs
prototype/: model.ipynb
site/: Cargo.toml  README.md  index.html  tailwind.css
site/src/: api.rs  data_agent.rs  grid.rs  home.rs  lib.rs  main.rs  model_agent.rs
site/src/app/: api.rs  grid.rs  home.rs  mod.rs
site/src/hooks/: counter.rs  mod.rs  queue.rs
site/tests/: web.rs
