[package]
authors = ["Sachin Iyer <sachinjiyer@gmail.com>"]
categories = ["wasm"]
description = "API for mnist-wasm"
edition = "2021"
license = "MIT"
name = "api"
readme = "../README.md"
repository = "https://github.com/sachiniyer/mnist-wasm.git"
version = "0.1.0"

[dependencies]
model = { path = "../model" }
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
