[package]
authors = ["Sachin Iyer <sachin@sachiniyer.com>"]
categories = ["wasm"]
description = "Site for mnist-wasm"
edition = "2021"
license = "GPLv3"
name = "site"
readme = "README.md"
repository = "https://github.com/sachiniyer/mnist-wasm.git"
version = "0.1.0"

[dependencies]
model = { path = "../model" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-agent = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
futures = "0.3.25"
js-sys = "0.3"
postcard = "1.0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "HtmlCollection"]
