[package]
authors = ["Sachin Iyer <sachin@sachiniyer.com>"]
categories = ["wasm"]
description = "Site for mnist-wasm"
edition = "2021"
license = "GPLv3"
name = "site"
readme = "README.md"
repository = "https://github.com/sachiniyer/mnist-wasm.git"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
model = { path = "../model" }
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = { path = "../yew/packages/yew", features = ["csr"] }
# yew-agent = { git = "https://github.com/yewstack/yew/" }
yew-agent = { path = "../yew/packages/yew-agent" }
postcard = "1.0"
wasm-bindgen = "0.2.90"
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.40"
futures = "0.3"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "HtmlCollection"]
